Update docs, add race condition when when publishing/discarding a draft

--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -158,6 +158,10 @@ Users are randomly assigned a value from 0 to 1 for each namespace. Each experim
 
 Before you can use namespaces, you must configure them under Settings > Namespaces.
 
+## Publishing Changes
+
+When you make changes to a feature's default value or override rules, the changes are not published immediately. This allows you to make multiple changes and then review them all at once before publishing. Ubpublished changes will not be included in API responses nor will they fire webhooks.
+
 ## Integration Options
 
 There are few ways to integrate GrowthBook features into your application.
