--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -190,7 +190,21 @@ params:
 
 #### BigQuery
 
-BigQuery access requires a service account.
+You must first create a Service Account in Google with the following roles:
+
+- Data Viewer
+- Metadata Viewer
+- Job User
+
+If you want GrowthBook to auto-discover credentials from environment variables or GCP metadata, use the following:
+
+```yml
+type: bigquery
+params:
+  authType: auto
+```
+
+If you prefer to pass in credentials directly, you can use this format instead:
 
 ```yml
 type: bigquery
