--- a/packages/docs/pages/overview.mdx
+++ b/packages/docs/pages/overview.mdx
@@ -31,7 +31,7 @@ if (growthbook.feature("my-feature").on) {
 const value = growthbook.feature("other-feature").value;
 ```
 
-GrowthBook also supports different environments, so you can, for example, have a feature enabled in **dev** but not **production**.
+GrowthBook also supports multiple environments, so you can, for example, have a feature enabled in **dev** but not **production**.
 
 You can also change the value of a feature with **Override Rules**. The following types of rules are supported:
 
