--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -158,13 +158,19 @@ Users are randomly assigned a value from 0 to 1 for each namespace. Each experim
 
 Before you can use namespaces, you must configure them under Settings > Namespaces.
 
-## Revisions and Publishing Changes
+## Publishing Changes
 
-When you make changes to a feature's default value or override rules, the changes are not published immediately. Instead, they are added to a new draft revision. This allows you to make multiple changes and then review them all at once before publishing. Unpublished changes will not be included in API responses nor will they fire webhooks.
+When you make changes to a feature's definition (default value or override rules), a new draft version of the feature is created automatically. This draft version is unpublished and is only visible within the GrowthBook UI, not to your users.
+
+You can continue adding changes to this draft and when you are ready, publish them all at once with an optional commit message.
+
+![Draft Modal](/images/draft-modal.png)
+
+## Revision History
+
+You can view a revision history for your feature and revert to a past version by clicking the blue revert icons. This will create a new draft based on the past version you select, so you can safely review it (or add additional changes) before deciding to publish.
 
 ![Feature Revisions](/images/feature-revisions.png)
-
-You can easily revert to any past revision by clicking the blue copy icon next to the revision number. This will create a new draft revision, so you can safely review the changes before deciding to publish them.
 
 ## Integration Options
 
