--- a/packages/docs/pages/app/dimensions.mdx
+++ b/packages/docs/pages/app/dimensions.mdx
@@ -10,9 +10,13 @@ countries in your dataset will be signficantly different just by random chance.
 It's best to treat dimensions as an exploratory tool and not something to directly draw conclusions from.
 The two best use cases are identfying bugs (the `browser` example) and getting ideas for dedicated follow-up experiments.
 
-There are two types of dimensions: User Dimensions and Experiment Dimensions. Currently, these are only supported for SQL data sources.
+Dimensions are supported for both Mixpanel and SQL data sources.
 
-## User Dimensions
+## SQL
+
+There are two types of dimensions for SQL data sources: User Dimensions and Experiment Dimensions.
+
+### User Dimensions
 
 These are attributes of your users that are relatively stable over time. For example, `subscription plan`, `age group`, `cohort`.
 
@@ -43,7 +47,7 @@ FROM
   users
 ```
 
-## Experiment Dimensions
+### Experiment Dimensions
 
 These are attributes that are specific to the point-in-time that a user was put into an experiment. For example, `browser` or `referrer`.
 
@@ -63,3 +67,34 @@ FROM
 ```
 
 The first 4 columns are standard, but `browser` is a custom one that can be used as an Experiment Dimension.
+
+## Mixpanel
+
+For mixpanel, there is just a single type of dimension that is based on event properties (at this time Mixpanel user properties are not supported).
+
+For simple dimensions, you can just put the event property name directly. For example: `$browser`.
+
+We also support complex javascript expressions. For example:
+
+```js
+event.properties.$browser.match(/chrome/i) ? "Chrome" : "Other";
+```
+
+You can also reference the experiment start/end date in your javascript expression. For example, if you add a super event called `userRegistrationDate` that stores a unix timestamp, you could make a `New vs Existing` dimension like this:
+
+```js
+event.properties.userRegistrationDate < {{ startDateUnix }} ? "new" : "existing"
+```
+
+The variables you can reference are:
+
+- **startDate** - `YYYY-MM-DD HH:mm:ss` of the earliest data that needs to be included
+- **startYear** - Just the `YYYY` of the startDate
+- **startMonth** - Just the `MM` of the startDate
+- **startDay** - Just the `DD` of the startDate
+- **startDateUnix** - Unix timestamp of the startDate (seconds since Jan 1, 1970)
+- **endDate** - `YYYY-MM-DD HH:mm:ss` of the latest data that needs to be included
+- **endYear** - Just the `YYYY` of the endDate
+- **endMonth** - Just the `MM` of the endDate
+- **endDay** - Just the `DD` of the endDate
+- **endDateUnix** - Unix timestamp of the endDate (seconds since Jan 1, 1970)
