--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -12,10 +12,7 @@ It's great whether you're looking to just analyze experiment results or looking 
     Meet with us
   </a>
   or
-  <a
-    href="https://join.slack.com/t/growthbookusers/shared_invite/zt-oiq9s1qd-TN6QehOB2y6yyRgfpJ4geg"
-    class="ml-2 mr-2"
-  >
+  <a href="https://slack.growthbook.io?ref=docs-home" class="ml-2 mr-2">
     Join our Slack
   </a>
 </div>
@@ -59,4 +56,4 @@ We believe good ideas come from everywhere. GrowthBook gives you feature flags s
 
 Use the menu or the Previous/Next links at the bottom to navigate these docs.
 
-[Join us on Slack](https://join.slack.com/t/growthbookusers/shared_invite/zt-oiq9s1qd-TN6QehOB2y6yyRgfpJ4geg) if you need help, want to chat, or are thinking of a new feature. We're here to help - and to make GrowthBook even better.
+[Join us on Slack](https://slack.growthbook.io?ref=docs-home) if you need help, want to chat, or are thinking of a new feature. We're here to help - and to make GrowthBook even better.
