Added mixpanel guide to docs

--- a/packages/docs/pages/guide/index.mdx
+++ b/packages/docs/pages/guide/index.mdx
@@ -11,7 +11,7 @@ The following sections contain detailed walk through on how to set up GrowthBook
 
 - [Google Analytics - UA](/guide/GA-universal-analytics)
 - Google Analytics - GA4
-- Mixpanel
+- [Mixpanel](/guide/mixpanel)
 - RudderStack
 - Jitsu
 - Snowplow
