Added docs for nextjs and CRA

--- a/packages/docs/pages/guide/index.mdx
+++ b/packages/docs/pages/guide/index.mdx
@@ -4,8 +4,8 @@ The following sections contain detailed walk through on how to set up GrowthBook
 
 ## Implementation guides
 
-- NextJS (with self hosting)
-- Create React App
+- [GrowthBook with NextJS](/guide/nextjs-and-growthbook)
+- [GrowthBook with Create React App](/guide/create-react-app-and-growthbook)
 
 ## Tracking and analytics setup for common event trackers:
 
