--- a/packages/docs/pages/guide/index.mdx
+++ b/packages/docs/pages/guide/index.mdx
@@ -10,8 +10,11 @@ The following sections contain detailed walk through on how to set up GrowthBook
 ## Tracking and analytics setup for common event trackers:
 
 - [Google Analytics - UA](/guide/GA-universal-analytics)
-- Google Analytics - GA4
 - [Mixpanel](/guide/mixpanel)
+
+## Coming soon:
+
+- Google Analytics - GA4
 - RudderStack
 - Jitsu
 - Snowplow
