--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -81,8 +81,9 @@ Optional. If not specified, GrowthBook will use the local file system to store u
 
 - **UPLOAD_METHOD** (set to "google-cloud" instead of default value "local")
 - **GCS_PROJECT_ID**
-- **GCS_KEY_FILENAME**
+- **GCS_PRIVATE_KEY_FILEPATH** (must be service account, download key from google and place file in directory )
 - **GCS_BUCKET**
+- **GCS_DOMAIN** (defaults to `https://storage.googleapis.com/${GCS_BUCKET}/`)
 
 ### Other Settings
 
