Removing unneeded variable for GCS_BUCKET and cleaned up the documentation.

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -81,7 +81,7 @@ Optional. If not specified, GrowthBook will use the local file system to store u
 
 - **UPLOAD_METHOD** (set to "google-cloud" instead of default value "local")
 - **GCS_PROJECT_ID**
-- **GCS_PRIVATE_KEY_FILEPATH** (must be service account, download key from google and place file in directory )
+- **GCS_PRIVATE_KEY_FILEPATH** (download service account key from google and place json file in directory )
 - **GCS_BUCKET**
 - **GCS_DOMAIN** (defaults to `https://storage.googleapis.com/${GCS_BUCKET}/`)
 
