--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -92,7 +92,7 @@ Optional. If specified, GrowthBook will use your S3 instance to store uploads.
 Optional. If specified, GrowthBook will use your Google Cloud Services instance to store uploads.
 
 - **UPLOAD_METHOD** (set to "google-cloud" instead of default value "local")
-- **GCS_PRIVATE_KEY_FILEPATH** (path to service account key )
+- **GOOGLE_APPLICATION_CREDENTIALS** (not required when deployed to Google Cloud with an instance role)
 - **GCS_BUCKET_NAME**
 - **GCS_DOMAIN** (optional. defaults to `https://storage.googleapis.com/${GCS_BUCKET_NAME}/`)
 
