--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -64,16 +64,33 @@ Only required if using Google Analytics as a data source
 - **GOOGLE_OAUTH_CLIENT_ID**
 - **GOOGLE_OAUTH_CLIENT_SECRET**
 
-### S3 File Uploads
+### File Uploads
 
-Optional. If not specified, GrowthBook will use the local file system to store uploads.
+The **UPLOAD_METHOD** environment variable controls where to store uploaded files
+and screenshots. The supported values are `local`, `s3`, and `google-cloud`.
 
-- **UPLOAD_METHOD** (set to "s3" instead of default value "local")
+#### local
+
+This is the default value. Uploads are stored in the GrowthBook docker container at
+`/usr/local/src/app/packages/back-end/uploads`. In production, you should mount a volume here to persist uploads across container restarts.
+
+#### s3
+
+Store uploads in an AWS S3 bucket.
+
 - **S3_BUCKET**
 - **S3_REGION** (defaults to `us-east-1`)
 - **S3_DOMAIN** (defaults to `https://${S3_BUCKET}.s3.amazonaws.com/`)
 - **AWS_ACCESS_KEY_ID** (not required when deployed to AWS with an instance role)
 - **AWS_SECRET_ACCESS_KEY** (not required when deployed to AWS with an instance role)
+
+#### google-cloud
+
+Store uploads in a Google Cloud Storage bucket.
+
+- **GCS_BUCKET_NAME**
+- **GCS_DOMAIN** (defaults to `https://storage.googleapis.com/${GCS_BUCKET_NAME}/`)
+- **GOOGLE_APPLICATION_CREDENTIALS** (not required when deployed to GCP with an instance service account)
 
 ### Other Settings
 
