--- a/packages/docs/pages/guide/mixpanel.mdx
+++ b/packages/docs/pages/guide/mixpanel.mdx
@@ -87,6 +87,7 @@ const growthbook = new GrowthBook({
     mixpanel.track("Experiment Viewed", {
       "Experiment Id": experiment.key,
       "Variant Id": result.variationId,
+      $source: "growthbook",
     });
   },
 });
