fixed name of Next.js

--- a/packages/docs/pages/guide/nextjs-and-growthbook.mdx
+++ b/packages/docs/pages/guide/nextjs-and-growthbook.mdx
@@ -1,6 +1,6 @@
-# GrowthBook and NextJS
+# GrowthBook and Next.js
 
-This document is a guide on how to add GrowthBook feature flags to your NextJS application. It assumes you are starting from scratch, so if you already have a NextJS application, you can skip to step 2.
+This document is a guide on how to add GrowthBook feature flags to your Next.js application. It assumes you are starting from scratch, so if you already have a NextJS application, you can skip to step 2.
 
 Here is a video version similar to the steps below:
 
