--- a/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
+++ b/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
@@ -1,4 +1,4 @@
-# A/B Testing with Rudderstack and NextJS
+# A/B Testing with Rudderstack and Next.js
 
 This document is a guide on how to add GrowthBook feature flags and A/B testing to your existing NextJS application using Rudderstack for event tracking.
 
