fixed name of Next.js

--- a/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
+++ b/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
@@ -1,6 +1,6 @@
 # A/B Testing with Rudderstack and Next.js
 
-This document is a guide on how to add GrowthBook feature flags and A/B testing to your existing NextJS application using Rudderstack for event tracking.
+This document is a guide on how to add GrowthBook feature flags and A/B testing to your existing Next.js application using Rudderstack for event tracking.
 
 ## 1. Create a GrowthBook Account
 
