--- a/packages/docs/pages/guide/index.mdx
+++ b/packages/docs/pages/guide/index.mdx
@@ -2,20 +2,25 @@
 
 The following sections contain detailed walk through on how to set up GrowthBook with various technologies.
 
+## Database connection guides
+
+- [BigQuery](/guide/bigquery)
+
 ## Implementation guides
 
-- [GrowthBook with NextJS](/guide/nextjs-and-growthbook)
+- [GrowthBook with Next.js](/guide/nextjs-and-growthbook)
 - [GrowthBook with Create React App](/guide/create-react-app-and-growthbook)
+- [GrowthBook with Next.js and Rudderstack](/guide/rudderstack-and-nextjs-with-growthbook)
 
 ## Tracking and analytics setup for common event trackers:
 
 - [Google Analytics - UA](/guide/GA-universal-analytics)
 - [Mixpanel](/guide/mixpanel)
+- [Rudderstack](/guide/rudderstack)
 
 ## Coming soon:
 
 - Google Analytics - GA4
-- RudderStack
 - Jitsu
 - Snowplow
 - Amplitude
