Added more crosslinking

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -214,6 +214,10 @@ For the S3 results url, we recommend naming your bucket with the prefix `aws-ath
 
 ### BigQuery
 
+We have a detailed page on how to set up [BiqQuery with GrowthBook](/guide/bigquery).
+
+The quick guide:
+
 You must first create a Service Account in Google with the following roles:
 
 - Data Viewer
