--- a/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
+++ b/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
@@ -19,7 +19,7 @@ From within your Rudderstack account, create a new JS source.
 />
 
 Name the source whatever you like, in this example I'm using `GrowthBook JS`. When the source is created, connect it to
-your BigQuery data warehouse (or whatever destination you're using for GrowthBook experiment data).
+your BigQuery data warehouse (or whatever destination you're using for GrowthBook experiment data) by clicking on `Add Destination`.
 
 <img
   src="/images/guides/rudderstack-8-source-w-destination.png"
