--- a/packages/docs/pages/lib/php.mdx
+++ b/packages/docs/pages/lib/php.mdx
@@ -227,7 +227,7 @@ analytics.track("Experiment Viewed", <?=json_encode([
 #### Mixpanel
 
 ```php
-mixpanel.track("Experiment Viewed", <?=json_encode([
+mixpanel.track('$experiment_started', <?=json_encode([
   'Experiment name' => $impression->experiment->key,
   'Variant name' => $impression->result->variationId,
   '$source' => 'growthbook'
