Added Mixpanel integration id to API calls and example tracking calls (#450)

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -174,10 +174,11 @@ Below is an example of what your Mixpanel tracking call would look like in Javas
 const growthbook = new GrowthBook({
   ...,
   trackingCallback: function(experiment, result) {
-    mixpanel.track("Experiment Viewed", {
-      "Experiment Id": experiment.key,
-      "Variant Id": result.variationId,
-    });
+    mixpanel.track("$experiment_started", {
+      "Experiment name": experiment.key,
+      "Variant name":  result.variationId,
+      "$source": "growthbook",
+    })
   }
 })
 ```
