--- a/packages/docs/pages/lib/php.mdx
+++ b/packages/docs/pages/lib/php.mdx
@@ -227,9 +227,10 @@ analytics.track("Experiment Viewed", <?=json_encode([
 #### Mixpanel
 
 ```php
-mixpanel.track("Experiment Viewed", <?=json_encode([
+mixpanel.track('$experiment_started', <?=json_encode([
   'Experiment name' => $impression->experiment->key,
-  'Variant name' => $impression->result->variationId
+  'Variant name' => $impression->result->variationId,
+  '$source' => 'growthbook'
 ])?>);
 ```
 
